stages/stage3/k8s/gateway/03-httproute-flight.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flight
  namespace: apollo-airlines-apps
spec:
  parentRefs:
    - name: apollo-gateway
  hostnames: ["flight.apollo.local"]
  rules:
    - backendRefs:
        - name: flight
          port: 8081
